--- a/docs/notebooks/train.ipynb
+++ b/docs/notebooks/train.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/selman/miniforge3/envs/cellflow/lib/python3.11/site-packages/anndata/_core/aligned_df.py:68: ImplicitModificationWarning: Transforming to str index.\n",
+      "/Users/selman/miniforge3/envs/cellflow/lib/python3.11/site-packages/anndata/_core/aligned_df.py:68: ImplicitModificationWarning: Transforming to str index.\n",
       "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
      ]
     }
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import functools\n",
     "\n",
-    "import cfp\n",
+    "import cellflow\n",
     "import scanpy as sc\n",
     "import numpy as np\n",
     "import functools\n",
@@ -240,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +249,7 @@
        " 'sample_covariate_reps': {'cell_type': 'cell_type'}}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,15 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 101.64 ms\n",
-      "[########################################] | 100% Completed | 1.25 sms\n",
+      "[########################################] | 100% Completed | 105.84 ms\n",
+      "[########################################] | 100% Completed | 105.85 ms\n",
+      "[########################################] | 100% Completed | 412.98 ms\n",
       "Finished preparing data\n"
      ]
     }
@@ -318,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -449,17 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 101.59 ms\n",
-      "[########################################] | 100% Completed | 1.25 sms\n",
-      "[########################################] | 100% Completed | 101.88 ms\n",
-      "[########################################] | 100% Completed | 1.25 sms\n"
+      "[########################################] | 100% Completed | 105.77 ms\n",
+      "[########################################] | 100% Completed | 309.39 ms\n",
+      "[########################################] | 100% Completed | 104.98 ms\n",
+      "[########################################] | 100% Completed | 399.56 ms\n"
      ]
     }
    ],
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +483,7 @@
        "540"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,22 +515,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{CudaDevice(id=0)}"
+       "{CpuDevice(id=0)}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cf.solver.vf_state.params['condition_encoder']['after_pool_modules_mean_0']['kernel'].devices()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cellflow.data._dataloader import CpuTrainSampler\n",
+    "dataloader = CpuTrainSampler(data=cf.train_data, batch_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import queue\n",
+    "import threading\n",
+    "import time  # Add this import at the top of the file\n",
+    "from collections.abc import Sequence\n",
+    "from typing import Any, Literal\n",
+    "import jax.numpy as jnp\n",
+    "import jax\n",
+    "import numpy as np\n",
+    "from numpy.typing import ArrayLike\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from cellflow.data._dataloader import CpuTrainSampler, ValidationSampler\n",
+    "from cellflow.solvers import _genot, _otfm\n",
+    "from cellflow.training._callbacks import BaseCallback, CallbackRunner\n",
+    "\n",
+    "\n",
+    "def prefetch_to_device(sampler, num_iterations, prefetch_factor=2, num_workers=4):\n",
+    "    seed = 42  # Set a fixed seed for reproducibility\n",
+    "    seq = np.random.SeedSequence(seed)\n",
+    "    random_generators = [np.random.default_rng(s) for s in seq.spawn(num_workers)]\n",
+    "\n",
+    "    q = queue.Queue(maxsize=prefetch_factor*num_workers)\n",
+    "    sem = threading.Semaphore(num_iterations)\n",
+    "    stop_event = threading.Event()\n",
+    "    def worker(rng):\n",
+    "        while not stop_event.is_set() and sem.acquire(blocking=False):\n",
+    "            batch = sampler.sample(rng)\n",
+    "            batch = jax.device_put(batch, jax.devices()[0], donate=True)\n",
+    "            jax.block_until_ready(batch)\n",
+    "            while not stop_event.is_set():\n",
+    "                try:\n",
+    "                    q.put(batch, timeout=1.0)\n",
+    "                    break  # Batch successfully put into the queue; break out of retry loop\n",
+    "                except queue.Full:\n",
+    "                    continue\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    # Start multiple worker threads\n",
+    "    ts = []\n",
+    "    for i in range(num_workers):\n",
+    "        t = threading.Thread(target=worker, daemon=True, name=f\"worker-{i}\", args=(random_generators[i], ))\n",
+    "        t.start()\n",
+    "        ts.append(t)\n",
+    "\n",
+    "    try:\n",
+    "        for _ in range(num_iterations):\n",
+    "            # Yield batches from the queue; will block waiting for available batch\n",
+    "            yield q.get()\n",
+    "    finally:\n",
+    "        # When the generator is closed or garbage collected, clean up the worker threads\n",
+    "        stop_event.set()  # Signal all workers to exit\n",
+    "        for t in ts:\n",
+    "            t.join()  # Wait for all worker threads to finish\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefetch_to_device(dataloader, num_iterations=100, prefetch_factor=2, num_workers=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 1\n",
+    "rng = np.random.default_rng(np.random.SeedSequence(seed + 10000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'src_cell_data': array([[ 2.1629744 ,  0.2553238 , -0.37207523, ..., -0.5949909 ,\n",
+       "          1.7239684 ,  0.58037424],\n",
+       "        [-0.21306144,  1.1288933 , -0.28751445, ..., -0.435637  ,\n",
+       "         -1.5042096 ,  1.4034455 ],\n",
+       "        [-0.21306144,  1.1288933 , -0.28751445, ..., -0.435637  ,\n",
+       "         -1.5042096 ,  1.4034455 ],\n",
+       "        ...,\n",
+       "        [-0.41723475, -0.1516465 , -1.0242379 , ..., -0.55732745,\n",
+       "          0.2977195 ,  0.6932218 ],\n",
+       "        [-0.2725472 ,  0.29985598,  0.515528  , ..., -0.830595  ,\n",
+       "         -0.44936737, -0.1041475 ],\n",
+       "        [-0.6362564 , -0.7889936 ,  0.09297998, ..., -0.0373694 ,\n",
+       "         -0.7823192 , -0.21801941]], shape=(100, 50), dtype=float32),\n",
+       " 'tgt_cell_data': array([[ 0.25597256, -0.09510171, -0.51105815, ...,  0.09576876,\n",
+       "          1.027608  , -1.3337334 ],\n",
+       "        [ 0.70467055, -0.7783663 ,  1.755893  , ...,  0.26792753,\n",
+       "          2.07906   ,  0.3890477 ],\n",
+       "        [ 1.0986998 , -1.2486377 , -0.17665577, ...,  0.3352405 ,\n",
+       "          0.36951387, -0.71817696],\n",
+       "        ...,\n",
+       "        [ 0.70467055, -0.7783663 ,  1.755893  , ...,  0.26792753,\n",
+       "          2.07906   ,  0.3890477 ],\n",
+       "        [-1.5018262 , -0.9668191 , -0.15721981, ...,  0.80121136,\n",
+       "          0.2341282 , -0.83257794],\n",
+       "        [ 2.4003417 , -0.6242071 , -0.8327849 , ...,  1.8484626 ,\n",
+       "          0.18822062, -0.4021228 ]], shape=(100, 50), dtype=float32),\n",
+       " 'condition': {'drug': array([[[-0.2541561 ,  2.2106197 , -0.82706386, -0.22049908,\n",
+       "           -0.12273113, -1.0091046 ,  0.5748448 ,  2.5326421 ,\n",
+       "            1.0067246 ,  1.038992  , -0.89786917,  0.17470409,\n",
+       "            0.10541671, -0.5240346 , -1.5660199 ,  0.8725769 ,\n",
+       "           -0.09613394,  0.15063444,  0.15727663, -0.615813  ,\n",
+       "           -0.1560608 , -0.03195943,  1.0908016 , -1.123057  ,\n",
+       "           -2.727824  ,  1.0850918 , -0.01527916,  0.21948372,\n",
+       "           -0.95144355,  0.6780232 , -1.1791915 ,  0.68472266,\n",
+       "           -0.37261483,  0.303525  ,  0.8031508 ,  0.45072466,\n",
+       "           -0.44717348, -1.244991  ,  0.20851901, -1.1813669 ,\n",
+       "           -0.8724793 ,  0.05082311, -0.69795954,  1.8407763 ,\n",
+       "            1.1710031 , -0.423717  , -1.7050401 ,  0.9281201 ,\n",
+       "            0.31100273, -1.1931003 ]]], dtype=float32),\n",
+       "  'dosage': array([[[0.33333334]]], dtype=float32),\n",
+       "  'cell_type': array([[[ 1.3486809 , -0.26745635,  1.2449985 , -1.4333522 ,\n",
+       "            0.71716475, -0.6468537 ,  0.3267433 ,  0.83050764,\n",
+       "            1.1210519 ,  0.03322478, -1.1958992 , -3.0883207 ,\n",
+       "           -1.7139783 , -0.9416811 , -1.1808523 ,  0.4081893 ,\n",
+       "           -0.371872  ,  0.43134633,  0.21576661, -0.06993908,\n",
+       "            0.76168805, -0.6122574 , -2.1508474 ,  1.5402564 ,\n",
+       "            1.5908545 ,  0.06697301,  1.0347923 , -1.3523953 ,\n",
+       "            0.3215682 , -0.6779416 ,  1.3035187 , -0.38984597,\n",
+       "            1.4859567 ,  1.403263  ,  0.8250093 ,  0.4685306 ,\n",
+       "            2.0270176 ,  2.0076158 , -1.0676092 ,  0.19814034,\n",
+       "           -2.5514934 ,  1.0441794 ,  1.4747387 , -1.6624237 ,\n",
+       "            0.1374664 ,  0.21607313,  0.5728537 , -0.79795617,\n",
+       "            1.664906  , -0.8398032 ]]], dtype=float32)}}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataloader.sample(rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cellflow.data._dataloader import ValidationSampler\n",
+    "validation_loaders = {k: ValidationSampler(v) for k, v in cf.validation_data.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cellflow.data._dataloader.ValidationSampler at 0x33f4254d0>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_loaders['train']"
    ]
   },
   {
