--- a/docs/notebooks/train2.ipynb
+++ b/docs/notebooks/train2.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -23,22 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata  = ad.read_h5ad('/Users/selman/Documents/datasets/pbmc_cytokines_train_subset.h5ad')"
+    "adata  = ad.read_h5ad('pbmc_cytokines_train.h5ad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 479694 × 2000\n",
+       "AnnData object with n_obs × n_vars = 9593880 × 2000\n",
        "    obs: 'sample', 'species', 'gene_count', 'tscp_count', 'mread_count', 'bc1_wind', 'bc2_wind', 'bc3_wind', 'bc1_well', 'bc2_well', 'bc3_well', 'log1p_n_genes_by_counts', 'log1p_total_counts', 'total_counts_MT', 'pct_counts_MT', 'log1p_total_counts_MT', 'donor', 'cytokine', 'treatment', 'cell_type', 'cytokine_family', 'condition', 'is_control'\n",
        "    var: 'n_cells', 'highly_variable', 'means', 'dispersions', 'dispersions_norm'\n",
        "    uns: 'donor_embeddings', 'esm2_embeddings', 'hvg', 'log1p', 'pca'\n",
@@ -46,7 +55,7 @@
        "    varm: 'PCs', 'X_mean'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,28 +66,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cf = cellflow.model.CellFlow(\n",
     "    adata=adata,\n",
-    "    solver='otcm'\n",
+    "    solver='otfm'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 105.96 ms\n",
-      "[########################################] | 100% Completed | 208.70 ms\n",
-      "[########################################] | 100% Completed | 419.88 ms\n"
+      "[########################################] | 100% Completed | 2.32 sms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/icb/selman.ozleyen/miniforge3/envs/cellflow/lib/python3.11/site-packages/jax/_src/numpy/lax_numpy.py:5540: RuntimeWarning: invalid value encountered in cast\n",
+      "  out = np.asarray(object, dtype=dtype)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[########################################] | 100% Completed | 933.38 ms\n"
      ]
     }
    ],
@@ -98,31 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/selman/projects/cellflow/src/cellflow/data/_datamanager.py:343: SettingWithCopyWarning: \n",
+      "/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/data/_datamanager.py:344: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  _covariate_data[\"cell_index\"] = _covariate_data.index\n",
-      "100%|██████████| 90/90 [00:01<00:00, 63.33it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 71.33it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 69.35it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 70.45it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 65.81it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 70.55it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 68.00it/s]\n",
-      "100%|██████████| 91/91 [00:01<00:00, 68.29it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 69.73it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 71.30it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 65.53it/s]\n",
-      "100%|██████████| 90/90 [00:01<00:00, 69.21it/s]\n"
+      "100%|██████████| 90/90 [00:42<00:00,  2.11it/s]\n",
+      "100%|██████████| 90/90 [00:43<00:00,  2.09it/s]\n",
+      "100%|██████████| 90/90 [00:43<00:00,  2.08it/s]\n",
+      " 86%|████████▌ | 77/90 [00:42<00:05,  2.19it/s]"
      ]
     }
    ],
@@ -136,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
