--- a/docs/notebooks/100_pbmc.ipynb
+++ b/docs/notebooks/100_pbmc.ipynb
@@ -2747,7 +2747,23 @@
       "    return rng.choice(self._data.control_to_perturbation[source_dist_idx])\n",
       "                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^\n",
       "KeyError: np.int64(3)\n",
-      "  0%|          | 215/100000 [00:33<34:38, 48.02it/s]  "
+      "  0%|          | 219/100000 [01:26<10:54:36,  2.54it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb Cell 31\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m cf\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     num_iterations\u001b[39m=\u001b[39;49m\u001b[39m1_000_00\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     batch_size\u001b[39m=\u001b[39;49m\u001b[39m1024\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     callbacks\u001b[39m=\u001b[39;49mcallbacks,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     valid_freq\u001b[39m=\u001b[39;49m\u001b[39m250_00\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     prefetch_factor\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     num_workers\u001b[39m=\u001b[39;49m\u001b[39m124\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/100_pbmc.ipynb#Y340sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m )\n",
+      "File \u001b[0;32m/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/model/_cellflow.py:540\u001b[0m, in \u001b[0;36mCellFlow.train\u001b[0;34m(self, num_iterations, batch_size, valid_freq, callbacks, monitor_metrics, prefetch_factor, num_workers)\u001b[0m\n\u001b[1;32m    537\u001b[0m child_seeds \u001b[39m=\u001b[39m seq\u001b[39m.\u001b[39mspawn(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validation_data))\n\u001b[1;32m    538\u001b[0m validation_loaders \u001b[39m=\u001b[39m {k: ValidationSampler(v, seed\u001b[39m=\u001b[39mchild_seeds[i]) \u001b[39mfor\u001b[39;00m i, (k, v) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalidation_data\u001b[39m.\u001b[39mitems())}\n\u001b[0;32m--> 540\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_solver \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrainer\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m    541\u001b[0m     dataloader\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataloader,\n\u001b[1;32m    542\u001b[0m     num_iterations\u001b[39m=\u001b[39;49mnum_iterations,\n\u001b[1;32m    543\u001b[0m     valid_freq\u001b[39m=\u001b[39;49mvalid_freq,\n\u001b[1;32m    544\u001b[0m     valid_loaders\u001b[39m=\u001b[39;49mvalidation_loaders,\n\u001b[1;32m    545\u001b[0m     callbacks\u001b[39m=\u001b[39;49mcallbacks,\n\u001b[1;32m    546\u001b[0m     monitor_metrics\u001b[39m=\u001b[39;49mmonitor_metrics,\n\u001b[1;32m    547\u001b[0m     prefetch_factor\u001b[39m=\u001b[39;49mprefetch_factor,\n\u001b[1;32m    548\u001b[0m     num_workers\u001b[39m=\u001b[39;49mnum_workers\n\u001b[1;32m    549\u001b[0m )\n",
+      "File \u001b[0;32m/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/training/_trainer.py:198\u001b[0m, in \u001b[0;36mCellFlowTrainer.train\u001b[0;34m(self, dataloader, num_iterations, valid_freq, valid_loaders, monitor_metrics, callbacks, num_workers, prefetch_factor)\u001b[0m\n\u001b[1;32m    196\u001b[0m rng_gpu, rng_step_fn \u001b[39m=\u001b[39m jax\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39msplit(rng_gpu, \u001b[39m2\u001b[39m)\n\u001b[1;32m    197\u001b[0m t0 \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m--> 198\u001b[0m batch \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39m(iter_sample)\n\u001b[1;32m    199\u001b[0m \u001b[39m# print(f\"Time taken for data loading: {time.time() - t0:.4f} seconds\")\u001b[39;00m\n\u001b[1;32m    200\u001b[0m t0 \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n",
+      "File \u001b[0;32m/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/training/_trainer.py:49\u001b[0m, in \u001b[0;36mprefetch_to_device\u001b[0;34m(sampler, num_iterations, prefetch_factor, num_workers)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m     47\u001b[0m     \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_iterations):\n\u001b[1;32m     48\u001b[0m         \u001b[39m# Yield batches from the queue; will block waiting for available batch\u001b[39;00m\n\u001b[0;32m---> 49\u001b[0m         \u001b[39myield\u001b[39;00m q\u001b[39m.\u001b[39;49mget()\n\u001b[1;32m     50\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     51\u001b[0m     \u001b[39m# When the generator is closed or garbage collected, clean up the worker threads\u001b[39;00m\n\u001b[1;32m     52\u001b[0m     stop_event\u001b[39m.\u001b[39mset()  \u001b[39m# Signal all workers to exit\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/cellflow/lib/python3.11/queue.py:171\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[39melif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    170\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_qsize():\n\u001b[0;32m--> 171\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnot_empty\u001b[39m.\u001b[39;49mwait()\n\u001b[1;32m    172\u001b[0m \u001b[39melif\u001b[39;00m timeout \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    173\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mtimeout\u001b[39m\u001b[39m'\u001b[39m\u001b[39m must be a non-negative number\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniforge3/envs/cellflow/lib/python3.11/threading.py:327\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    325\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    326\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 327\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    328\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    329\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -2764,7 +2780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "id": "586959d4",
    "metadata": {},
    "outputs": [
@@ -2837,7 +2853,7 @@
        "        1068], dtype=int32)}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
