--- a/docs/notebooks/train2.ipynb
+++ b/docs/notebooks/train2.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,16 @@
       "  _covariate_data[\"cell_index\"] = _covariate_data.index\n",
       "100%|██████████| 90/90 [00:46<00:00,  1.92it/s]\n",
       "100%|██████████| 90/90 [00:43<00:00,  2.05it/s]\n",
-      " 86%|████████▌ | 77/90 [00:35<00:05,  2.36it/s]"
+      "100%|██████████| 90/90 [00:41<00:00,  2.15it/s]\n",
+      "100%|██████████| 90/90 [00:41<00:00,  2.16it/s]\n",
+      "100%|██████████| 90/90 [00:42<00:00,  2.13it/s]\n",
+      "100%|██████████| 90/90 [00:46<00:00,  1.93it/s]\n",
+      "100%|██████████| 90/90 [00:42<00:00,  2.10it/s]\n",
+      "100%|██████████| 91/91 [00:45<00:00,  1.98it/s]\n",
+      "100%|██████████| 90/90 [00:45<00:00,  2.00it/s]\n",
+      "100%|██████████| 90/90 [00:45<00:00,  1.97it/s]\n",
+      "100%|██████████| 90/90 [00:44<00:00,  2.02it/s]\n",
+      "100%|██████████| 90/90 [00:46<00:00,  1.94it/s]\n"
      ]
     }
    ],
@@ -153,33 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 4.03 ss\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/data/_datamanager.py:753: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in asarray is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/jax-ml/jax#current-gotchas for more.\n",
-      "  split_covariates_mask = jnp.asarray(df[\"split_covariates_mask\"].values, dtype=jnp.int32)\n",
-      "/home/icb/selman.ozleyen/miniforge3/envs/cellflow/lib/python3.11/site-packages/jax/_src/numpy/lax_numpy.py:5540: RuntimeWarning: invalid value encountered in cast\n",
-      "  out = np.asarray(object, dtype=dtype)\n",
-      "/ictstr01/home/icb/selman.ozleyen/projects/cell_flow_perturbation/src/cellflow/data/_datamanager.py:754: UserWarning: Explicitly requested dtype <class 'jax.numpy.int64'> requested in asarray is not available, and will be truncated to dtype int32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/jax-ml/jax#current-gotchas for more.\n",
-      "  perturbation_covariates_mask = jnp.asarray(df[\"perturbation_covariates_mask\"].values, dtype=jnp.int32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[########################################] | 100% Completed | 862.27 ms\n"
+      "[########################################] | 100% Completed | 101.50 ms\n",
+      "[########################################] | 100% Completed | 2.99 sms\n",
+      "[########################################] | 100% Completed | 1.24 sms\n"
      ]
     }
    ],
@@ -192,18 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Mismatch in split_idx_to_covariates keys, len old: 12, len new: 9, old: dict_keys([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]), new: dict_keys([0, 4, 5, 6, 7, 8, 9, 10, 11])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m new_attr \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(n, attr)\n\u001b[1;32m     <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m attr  \u001b[39min\u001b[39;00m {\u001b[39m\"\u001b[39m\u001b[39msplit_idx_to_covariates\u001b[39m\u001b[39m\"\u001b[39m}:\n\u001b[0;32m---> <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mset\u001b[39m(old_attr\u001b[39m.\u001b[39mkeys()) \u001b[39m==\u001b[39m \u001b[39mset\u001b[39m(new_attr\u001b[39m.\u001b[39mkeys()), \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMismatch in \u001b[39m\u001b[39m{\u001b[39;00mattr\u001b[39m}\u001b[39;00m\u001b[39m keys, len old: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(old_attr)\u001b[39m}\u001b[39;00m\u001b[39m, len new: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(new_attr)\u001b[39m}\u001b[39;00m\u001b[39m, old: \u001b[39m\u001b[39m{\u001b[39;00mold_attr\u001b[39m.\u001b[39mkeys()\u001b[39m}\u001b[39;00m\u001b[39m, new: \u001b[39m\u001b[39m{\u001b[39;00mnew_attr\u001b[39m.\u001b[39mkeys()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m old_attr\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m     <a href='vscode-notebook-cell://127.0.0.1:8282/home/icb/selman.ozleyen/projects/cell_flow_perturbation/docs/notebooks/train2.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m         \u001b[39massert\u001b[39;00m new_attr[key] \u001b[39m==\u001b[39m old_attr[key], \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMismatch in \u001b[39m\u001b[39m{\u001b[39;00mattr\u001b[39m}\u001b[39;00m\u001b[39m for key \u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m, old: \u001b[39m\u001b[39m{\u001b[39;00mold_attr[key]\u001b[39m}\u001b[39;00m\u001b[39m, new: \u001b[39m\u001b[39m{\u001b[39;00mnew_attr[key]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Mismatch in split_idx_to_covariates keys, len old: 12, len new: 9, old: dict_keys([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]), new: dict_keys([0, 4, 5, 6, 7, 8, 9, 10, 11])"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed split_idx_to_covariates check\n",
+      "Passed perturbation_idx_to_covariates check\n",
+      "Passed perturbation_idx_to_id check\n",
+      "Passed condition_data check\n",
+      "Passed control_to_perturbation check\n",
+      "[-1 -1 -1 ... -1 -1 -1] [-1 -1 -1 ... -1 -1 -1]\n",
+      "Passed split_covariates_mask check\n",
+      "[802 802 802 ... 801 801 801] [802 802 802 ... 801 801 801]\n",
+      "Passed perturbation_covariates_mask check\n"
      ]
     }
    ],
